修改hypervisor的service单元测试代码